--- a/simplemonitor.yaml
+++ b/simplemonitor.yaml
@@ -29,7 +29,7 @@ Resources:
                     - 
                         Sid: "AWSCloudTrailAclCheck20150319"
                         Effect: "Allow"
-                        Principal: {"Service": "cloudtrail.amazonaws.com"},
+                        Principal: {"Service": "cloudtrail.amazonaws.com"}
                         Action: "s3:GetBucketAcl"
                         Resource: !GetAtt configS3bucket.Arn
                     -
@@ -37,10 +37,11 @@ Resources:
                         Effect: "Allow"
                         Principal: {"Service": "cloudtrail.amazonaws.com"}
                         Action: "s3:PutObject"
-                        Resource: !Sub '"arn:aws:s3:::${AWS::StackName}.imperial.galactic.gov/cloudTrail/AWSLogs/${AWS::AccountId}/*",
+                        Resource: !Sub 'arn:aws:s3:::${AWS::StackName}.imperial.galactic.gov/cloudTrail/AWSLogs/${AWS::AccountId}/*'
                         Condition: {"StringEquals": {"s3:x-amz-acl": "bucket-owner-full-control"}}
     cloudTrail:
         Type: AWS::CloudTrail::Trail
+        DependsOn: cloudTrailBucketPolicy
         Properties: 
             IncludeGlobalServiceEvents: True
             IsLogging: False
