update cloudtrail for cloudwatch logs

--- a/simplemonitor.yaml
+++ b/simplemonitor.yaml
@@ -90,6 +90,8 @@ Resources:
             - cloudTrailBucketPolicy
             - cloudTrailSNSPolicy
         Properties: 
+            CloudWatchLogsLogGroupArn: !GetAtt cloudTrailCloudWatchLogs.Arn
+            CloudWatchLogsRoleArn: !GetAtt cloudTrailRole.Arn
             IncludeGlobalServiceEvents: True
             IsLogging: False
             IsMultiRegionTrail: True
